_sass/components.form.scss
/*-------------------
        Form
--------------------*/


// form fieds
// -------------------------
.tk-ff {
    position: relative;
    margin-bottom: $gutter;
    max-width: 400px;
}

.tk-ff--grid {
    display: grid;
    grid-column-gap: $gutter;
    max-width: 600px;

    @include sm {
        margin-bottom: $half-gutter;
        grid-template-columns: 2fr 5fr;
    }

    .tk-ff__label {
        @include sm {
            line-height: $button-height;
            text-align: right;
        }
    }

    .tk-ff__icon {
        @include sm {
            top: 12px;
        }
    }

    &:last-child {
        @include sm {
            margin-bottom: 0;
        }
    }
}

.tk-ff__description {
    margin: 7px 0 0;
    @include font-style(14px, normal, 1.5);
    color: $ns-grey-4;
}

.tk-ff__error {
    display: none;
    visibility: hidden;
    margin: 4px 0 0;
    @include font-style(14px, normal, 1.5);
    color: $ns-red-alert;
}

.tk-ff__message {
    display: none;
    opacity: 1;
    margin: 4px 0 0;
    @include font-style(14px, bold, 1.5);
    color: $ns-green-sexy;
    transition: $fade-all;

    &.is-active {
        display: block;
        opacity: 1;
    }
}


// ------------------------------------
.tk-ff__icon {
    opacity: 0;
    transition: $fade-all;
    position: absolute;
    top: 13px;
    right: 14px;

    &.is-active {
        opacity: 1;
    }
}

.tk-ff__icon--loading {
    @keyframes rotate {
        from {
            transform: rotate(0deg);
        }

        to {
            transform: rotate(360deg);
        }
    }

    svg {
        transform-origin: 50% 50%;
        animation: rotate 500ms linear infinite;
        fill: $ns-blue;
        transition: $fade-link;
    }
}

.tk-ff__icon--approved {
    svg {
        width: 17px;
        fill: $ns-green-sexy;
    }
}

.tk-ff__icon--known {
    top: 11px;
    right: 13px;

    svg {
        fill: $ns-green-sexy;
    }
}


// ------------------------------------
.tk-ff__filled {
    @include font-style(18px, bold, ($button-height - 4));
    color: $ns-blue;
}

.tk-ff__filled-icon {
    position: relative;
    top: 1px;
    margin-left: 7px;

    svg {
        transition: $fade-link;
        fill: $ns-light-blue;
    }

    &:hover {
        svg {
            fill: $ns-blue;
        }
    }
}


// ------------------------------------
.tk-ff__label {
    display: block;
    margin-bottom: 7px;
    transition: $fade-link;
    @include font-style(16px, normal, 1.25);
    color: $ns-blue;

    @include sm {
        margin-bottom: 0;
    }
}


// ------------------------------------
.tk-ff__address {
    display: none;
    transform: scaleY(0.7);
    transform-origin: 0 0;
}

.tk-ff__address-container {
    display: grid;
    grid-template-columns: 1fr max-content;
    align-items: center;
    padding: 14px;
    background-color: $ns-grey-8;
    border: 1px solid $ns-grey-7;
    @include font-style(14px, normal, 1.5);
    color: $ns-blue;
}

.tk-ff__address-icon {
    position: relative;
    right: -4px;
    top: -1px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 35px;
    height: 35px;
    cursor: pointer;
}


// ------------------------------------
.tk-ff__input {
    // lay-out
    width: 100%;
    padding-top: 7px;
    height: $button-height;

    // styling
    -webkit-appearance: none;
    border: 1px solid $ns-grey-6b;
    @include font-style(18px, bold, 1.25);
    color: $ns-blue;
    transition: $fade-link;

    &.is-error {
        border: 1px solid $ns-red-alert;
    }

    &::placeholder {
        @include font-style(16px, normal, 1.5);
        color: $ns-grey-6;
    }

    &:focus {
        box-shadow: 0 2px 28px rgba($ns-black, 0.1);
        border: 1px solid $ns-blue;
        color: $ns-blue;
    }

    &:-webkit-autofill {
        box-shadow: 0 0 0px 1000px $ns-blue-4 inset;
        -webkit-text-fill-color: $ns-blue;
    }

    &:-webkit-autofill:focus {
        box-shadow: 0 2px 28px rgba($ns-black, 0.1), 0 0 0px 1000px $ns-blue-4 inset;
    }
}

.tk-ff__input-container {
    position: relative;
}


// ------------------------------------
.no-touch {
    .tk-ff__input:hover {
        border: 1px solid $ns-grey-5;
    }

    .tk-ff__input:focus {
        border: 1px solid $ns-blue;
    }
}

